<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/borrow_books"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:iconTint="@color/common_google_signin_btn_text_dark_pressed"
        android:title="Borrow Books" />

    <item
        android:id="@+id/my_books"
        android:actionLayout="@color/common_google_signin_btn_text_dark_default"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/common_google_signin_btn_text_dark_pressed"
        android:title="My Books" />

    <item
        android:id="@+id/request_books"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:iconTint="@color/common_google_signin_btn_text_dark_pressed"
        android:title="Requests" />

</menu>
