...
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toEndOf="@+id/profile_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/searchView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/ghost_white"
...
